packages/flutter_mimir/macos/Classes/frb.h

typedef struct DartCObject DartCObject;
typedef struct wire_uint_8_list {
  uint8_t *ptr;
  int32_t len;
} wire_uint_8_list;
typedef struct wire_StringList {
  struct wire_uint_8_list **ptr;
  int32_t len;
} wire_StringList;
typedef struct wire_SortBy_Asc {
  struct wire_uint_8_list *field0;
} wire_SortBy_Asc;
typedef struct wire_SortBy_Desc {
  struct wire_uint_8_list *field0;
} wire_SortBy_Desc;
typedef union SortByKind {
  struct wire_SortBy_Asc *Asc;
  struct wire_SortBy_Desc *Desc;
} SortByKind;
typedef struct wire_SortBy {
  int32_t tag;
  union SortByKind *kind;
} wire_SortBy;
typedef struct wire_list_sort_by {
  struct wire_SortBy *ptr;
  int32_t len;
} wire_list_sort_by;
typedef struct wire_list_filter {
  struct wire_Filter *ptr;
  int32_t len;
} wire_list_filter;
typedef struct wire_Filter_Or {
  struct wire_list_filter *field0;
} wire_Filter_Or;
typedef struct wire_Filter_And {
  struct wire_list_filter *field0;
} wire_Filter_And;
typedef struct wire_Filter_Not {
  struct wire_Filter *field0;
} wire_Filter_Not;
typedef struct wire_Filter_Exists {
  struct wire_uint_8_list *field;
} wire_Filter_Exists;
typedef struct wire_Filter_InValues {
  struct wire_uint_8_list *field;
  struct wire_StringList *values;
} wire_Filter_InValues;
typedef struct wire_Filter_GreaterThan {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_GreaterThan;
typedef struct wire_Filter_GreaterThanOrEqual {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_GreaterThanOrEqual;
typedef struct wire_Filter_Equal {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_Equal;
typedef struct wire_Filter_NotEqual {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_NotEqual;
typedef struct wire_Filter_LessThan {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_LessThan;
typedef struct wire_Filter_LessThanOrEqual {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *value;
} wire_Filter_LessThanOrEqual;
typedef struct wire_Filter_Between {
  struct wire_uint_8_list *field;
  struct wire_uint_8_list *from;
  struct wire_uint_8_list *to;
} wire_Filter_Between;
typedef struct wire_Filter_IsNull {
  struct wire_uint_8_list *field;
} wire_Filter_IsNull;
typedef struct wire_Filter_IsEmpty {
  struct wire_uint_8_list *field;
} wire_Filter_IsEmpty;
typedef union FilterKind {
  struct wire_Filter_Or *Or;
  struct wire_Filter_And *And;
  struct wire_Filter_Not *Not;
  struct wire_Filter_Exists *Exists;
  struct wire_Filter_InValues *InValues;
  struct wire_Filter_GreaterThan *GreaterThan;
  struct wire_Filter_GreaterThanOrEqual *GreaterThanOrEqual;
  struct wire_Filter_Equal *Equal;
  struct wire_Filter_NotEqual *NotEqual;
  struct wire_Filter_LessThan *LessThan;
  struct wire_Filter_LessThanOrEqual *LessThanOrEqual;
  struct wire_Filter_Between *Between;
  struct wire_Filter_IsNull *IsNull;
  struct wire_Filter_IsEmpty *IsEmpty;
} FilterKind;
typedef struct wire_Filter {
  int32_t tag;
  union FilterKind *kind;
} wire_Filter;
typedef struct wire_Synonyms {
  struct wire_uint_8_list *word;
  struct wire_StringList *synonyms;
} wire_Synonyms;
typedef struct wire_list_synonyms {
  struct wire_Synonyms *ptr;
  int32_t len;
} wire_list_synonyms;
typedef struct wire_MimirIndexSettings {
  struct wire_uint_8_list *primary_key;
  struct wire_StringList *searchable_fields;
  struct wire_StringList *filterable_fields;
  struct wire_StringList *sortable_fields;
  struct wire_StringList *ranking_rules;
  struct wire_StringList *stop_words;
  struct wire_list_synonyms *synonyms;
  bool typos_enabled;
  uint8_t min_word_size_for_one_typo;
  uint8_t min_word_size_for_two_typos;
  struct wire_StringList *disallow_typos_on_words;
  struct wire_StringList *disallow_typos_on_fields;
} wire_MimirIndexSettings;
typedef struct DartCObject *WireSyncReturn;
void wire_set_settings(int64_t port_,
                       struct wire_uint_8_list *instance_dir,
                       struct wire_uint_8_list *index_name,
                       struct wire_MimirIndexSettings *settings);
struct wire_StringList *new_StringList_0(int32_t len);
struct wire_Filter *new_box_autoadd_filter_0(void);
struct wire_MimirIndexSettings *new_box_autoadd_mimir_index_settings_0(void);
int32_t *new_box_autoadd_terms_matching_strategy_0(int32_t value);
uint32_t *new_box_autoadd_u32_0(uint32_t value);
struct wire_Filter *new_box_filter_0(void);
struct wire_list_filter *new_list_filter_0(int32_t len);
struct wire_list_sort_by *new_list_sort_by_0(int32_t len);
struct wire_list_synonyms *new_list_synonyms_0(int32_t len);
struct wire_uint_8_list *new_uint_8_list_0(int32_t len);
union FilterKind *inflate_Filter_Or(void);
union FilterKind *inflate_Filter_And(void);
union FilterKind *inflate_Filter_Not(void);
union FilterKind *inflate_Filter_Exists(void);
union FilterKind *inflate_Filter_InValues(void);
union FilterKind *inflate_Filter_GreaterThan(void);
union FilterKind *inflate_Filter_GreaterThanOrEqual(void);
union FilterKind *inflate_Filter_Equal(void);
union FilterKind *inflate_Filter_NotEqual(void);
union FilterKind *inflate_Filter_LessThan(void);
union FilterKind *inflate_Filter_LessThanOrEqual(void);
union FilterKind *inflate_Filter_Between(void);
union FilterKind *inflate_Filter_IsNull(void);
union FilterKind *inflate_Filter_IsEmpty(void);
union SortByKind *inflate_SortBy_Asc(void);
union SortByKind *inflate_SortBy_Desc(void);
void free_WireSyncReturn(WireSyncReturn ptr);