packages/mimir/lib/src/bridge_generated.io.dart


  late final _wire_set_settingsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Int64,
              ffi.Pointer<wire_uint_8_list>,
              ffi.Pointer<wire_uint_8_list>,
              ffi.Pointer<wire_MimirIndexSettings>)>>('wire_set_settings');
  late final _wire_set_settings = _wire_set_settingsPtr.asFunction<
      void Function(
          int,
          ffi.Pointer<wire_uint_8_list>,
          ffi.Pointer<wire_uint_8_list>,
          ffi.Pointer<wire_MimirIndexSettings>)>();

  ffi.Pointer<wire_StringList> new_StringList_0(
    int len,
  ) {
    return _new_StringList_0(
      len,
    );
  }

  late final _new_StringList_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_StringList> Function(ffi.Int32)>>(
      'new_StringList_0');
  late final _new_StringList_0 = _new_StringList_0Ptr
      .asFunction<ffi.Pointer<wire_StringList> Function(int)>();

  ffi.Pointer<wire_Filter> new_box_autoadd_filter_0() {
    return _new_box_autoadd_filter_0();
  }

  late final _new_box_autoadd_filter_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_Filter> Function()>>(
          'new_box_autoadd_filter_0');
  late final _new_box_autoadd_filter_0 = _new_box_autoadd_filter_0Ptr
      .asFunction<ffi.Pointer<wire_Filter> Function()>();

  ffi.Pointer<wire_MimirIndexSettings>
      new_box_autoadd_mimir_index_settings_0() {
    return _new_box_autoadd_mimir_index_settings_0();
  }

  late final _new_box_autoadd_mimir_index_settings_0Ptr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_MimirIndexSettings> Function()>>(
      'new_box_autoadd_mimir_index_settings_0');
  late final _new_box_autoadd_mimir_index_settings_0 =
      _new_box_autoadd_mimir_index_settings_0Ptr
          .asFunction<ffi.Pointer<wire_MimirIndexSettings> Function()>();

  ffi.Pointer<ffi.Int32> new_box_autoadd_terms_matching_strategy_0(
    int value,
  ) {
    return _new_box_autoadd_terms_matching_strategy_0(
      value,
    );
  }

  late final _new_box_autoadd_terms_matching_strategy_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int32> Function(ffi.Int32)>>(
          'new_box_autoadd_terms_matching_strategy_0');
  late final _new_box_autoadd_terms_matching_strategy_0 =
      _new_box_autoadd_terms_matching_strategy_0Ptr
          .asFunction<ffi.Pointer<ffi.Int32> Function(int)>();

  ffi.Pointer<ffi.Uint32> new_box_autoadd_u32_0(
    int value,
  ) {
    return _new_box_autoadd_u32_0(
      value,
    );
  }

  late final _new_box_autoadd_u32_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'new_box_autoadd_u32_0');
  late final _new_box_autoadd_u32_0 = _new_box_autoadd_u32_0Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<wire_Filter> new_box_filter_0() {
    return _new_box_filter_0();
  }

  late final _new_box_filter_0Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_Filter> Function()>>(
          'new_box_filter_0');
  late final _new_box_filter_0 =
      _new_box_filter_0Ptr.asFunction<ffi.Pointer<wire_Filter> Function()>();

  ffi.Pointer<wire_list_filter> new_list_filter_0(
    int len,
  ) {
    return _new_list_filter_0(
      len,
    );
  }

  late final _new_list_filter_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_filter> Function(
              ffi.Int32)>>('new_list_filter_0');
  late final _new_list_filter_0 = _new_list_filter_0Ptr
      .asFunction<ffi.Pointer<wire_list_filter> Function(int)>();

  ffi.Pointer<wire_list_sort_by> new_list_sort_by_0(
    int len,
  ) {
    return _new_list_sort_by_0(
      len,
    );
  }

  late final _new_list_sort_by_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_sort_by> Function(
              ffi.Int32)>>('new_list_sort_by_0');
  late final _new_list_sort_by_0 = _new_list_sort_by_0Ptr
      .asFunction<ffi.Pointer<wire_list_sort_by> Function(int)>();

  ffi.Pointer<wire_list_synonyms> new_list_synonyms_0(
    int len,
  ) {
    return _new_list_synonyms_0(
      len,
    );
  }

  late final _new_list_synonyms_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_list_synonyms> Function(
              ffi.Int32)>>('new_list_synonyms_0');
  late final _new_list_synonyms_0 = _new_list_synonyms_0Ptr
      .asFunction<ffi.Pointer<wire_list_synonyms> Function(int)>();

  ffi.Pointer<wire_uint_8_list> new_uint_8_list_0(
    int len,
  ) {
    return _new_uint_8_list_0(
      len,
    );
  }

  late final _new_uint_8_list_0Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_uint_8_list> Function(
              ffi.Int32)>>('new_uint_8_list_0');
  late final _new_uint_8_list_0 = _new_uint_8_list_0Ptr
      .asFunction<ffi.Pointer<wire_uint_8_list> Function(int)>();

  ffi.Pointer<FilterKind> inflate_Filter_Or() {
    return _inflate_Filter_Or();
  }

  late final _inflate_Filter_OrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_Or');
  late final _inflate_Filter_Or =
      _inflate_Filter_OrPtr.asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_And() {
    return _inflate_Filter_And();
  }

  late final _inflate_Filter_AndPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_And');
  late final _inflate_Filter_And =
      _inflate_Filter_AndPtr.asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_Not() {
    return _inflate_Filter_Not();
  }

  late final _inflate_Filter_NotPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_Not');
  late final _inflate_Filter_Not =
      _inflate_Filter_NotPtr.asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_Exists() {
    return _inflate_Filter_Exists();
  }

  late final _inflate_Filter_ExistsPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_Exists');
  late final _inflate_Filter_Exists = _inflate_Filter_ExistsPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_InValues() {
    return _inflate_Filter_InValues();
  }

  late final _inflate_Filter_InValuesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_InValues');
  late final _inflate_Filter_InValues = _inflate_Filter_InValuesPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_GreaterThan() {
    return _inflate_Filter_GreaterThan();
  }

  late final _inflate_Filter_GreaterThanPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_GreaterThan');
  late final _inflate_Filter_GreaterThan = _inflate_Filter_GreaterThanPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_GreaterThanOrEqual() {
    return _inflate_Filter_GreaterThanOrEqual();
  }

  late final _inflate_Filter_GreaterThanOrEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_GreaterThanOrEqual');
  late final _inflate_Filter_GreaterThanOrEqual =
      _inflate_Filter_GreaterThanOrEqualPtr
          .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_Equal() {
    return _inflate_Filter_Equal();
  }

  late final _inflate_Filter_EqualPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_Equal');
  late final _inflate_Filter_Equal =
      _inflate_Filter_EqualPtr.asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_NotEqual() {
    return _inflate_Filter_NotEqual();
  }

  late final _inflate_Filter_NotEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_NotEqual');
  late final _inflate_Filter_NotEqual = _inflate_Filter_NotEqualPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_LessThan() {
    return _inflate_Filter_LessThan();
  }

  late final _inflate_Filter_LessThanPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_LessThan');
  late final _inflate_Filter_LessThan = _inflate_Filter_LessThanPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_LessThanOrEqual() {
    return _inflate_Filter_LessThanOrEqual();
  }

  late final _inflate_Filter_LessThanOrEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_LessThanOrEqual');
  late final _inflate_Filter_LessThanOrEqual =
      _inflate_Filter_LessThanOrEqualPtr
          .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_Between() {
    return _inflate_Filter_Between();
  }

  late final _inflate_Filter_BetweenPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_Between');
  late final _inflate_Filter_Between = _inflate_Filter_BetweenPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_IsNull() {
    return _inflate_Filter_IsNull();
  }

  late final _inflate_Filter_IsNullPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_IsNull');
  late final _inflate_Filter_IsNull = _inflate_Filter_IsNullPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<FilterKind> inflate_Filter_IsEmpty() {
    return _inflate_Filter_IsEmpty();
  }

  late final _inflate_Filter_IsEmptyPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<FilterKind> Function()>>(
          'inflate_Filter_IsEmpty');
  late final _inflate_Filter_IsEmpty = _inflate_Filter_IsEmptyPtr
      .asFunction<ffi.Pointer<FilterKind> Function()>();

  ffi.Pointer<SortByKind> inflate_SortBy_Asc() {
    return _inflate_SortBy_Asc();
  }

  late final _inflate_SortBy_AscPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SortByKind> Function()>>(
          'inflate_SortBy_Asc');
  late final _inflate_SortBy_Asc =
      _inflate_SortBy_AscPtr.asFunction<ffi.Pointer<SortByKind> Function()>();

  ffi.Pointer<SortByKind> inflate_SortBy_Desc() {
    return _inflate_SortBy_Desc();
  }

  late final _inflate_SortBy_DescPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<SortByKind> Function()>>(
          'inflate_SortBy_Desc');
  late final _inflate_SortBy_Desc =
      _inflate_SortBy_DescPtr.asFunction<ffi.Pointer<SortByKind> Function()>();

  void free_WireSyncReturn(
    WireSyncReturn ptr,
  ) {
    return _free_WireSyncReturn(
      ptr,
    );
  }

  late final _free_WireSyncReturnPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(WireSyncReturn)>>(
          'free_WireSyncReturn');
  late final _free_WireSyncReturn =
      _free_WireSyncReturnPtr.asFunction<void Function(WireSyncReturn)>();
}

final class _Dart_Handle extends ffi.Opaque {}

final class wire_uint_8_list extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_StringList extends ffi.Struct {
  external ffi.Pointer<ffi.Pointer<wire_uint_8_list>> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_SortBy_Asc extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

final class wire_SortBy_Desc extends ffi.Struct {
  external ffi.Pointer<wire_uint_8_list> field0;
}

final class SortByKind extends ffi.Union {
  external ffi.Pointer<wire_SortBy_Asc> Asc;

  external ffi.Pointer<wire_SortBy_Desc> Desc;
}

final class wire_SortBy extends ffi.Struct {
  @ffi.Int32()
  external int tag;

  external ffi.Pointer<SortByKind> kind;
}
